--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "build": "tsc -p ./tsconfig.json"
+  },
   "devDependencies": {
     "@types/node": "^10.12.9",
     "typescript": "^3.1.6"
