--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "scripts": {
+    "start": "node build/index.js",
+    "exec": "npm run build && npm start",
     "build": "tsc -p ./tsconfig.json"
   },
   "devDependencies": {
